--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "types": "turbo types",
     "test": "turbo test",
     "test:watch": "turbo test:watch",
-    "test:coverage": "turbo test:coverage"
+    "test:coverage": "turbo test:coverage",
+    "gen:changelog": "turbo gen:changelog"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
@@ -21,5 +22,5 @@
     "node": ">=18"
   },
   "packageManager": "npm@11.3.0",
-  "workspaces": ["apps/*", "packages/*"]
+  "workspaces": ["apps/*", "packages/*", "scripts"]
 }
