--- a/turbo.json
+++ b/turbo.json
@@ -27,6 +27,9 @@
       "cache": false,
       "interactive": true,
       "persistent": true
+    },
+    "gen:changelog": {
+      "dependsOn": []
     }
   },
   "ui": "tui"
